# vivado-CLI-installation

./: .gitignore  README.md  pyproject.toml
phases/phase0/v1/: ARCHITECTURE.md  README.md  RESEARCH_NOTES.md  ROADMAP.md
phases/phase0/v2/: MANUAL_CHECKLIST.md
phases/phase1/v1/: ARCHITECTURE.md  MANUAL_CHECKLIST.md  README.md  RESEARCH_NOTES.md  ROADMAP.md
phases/start/: ARCHITECTURE.md  MANUAL_CHECKLIST.md  ROADMAP.md
start/: README.md  RESEARCH_NOTES.md
vivado_mac/: cli.py  doctor.py  vm.py
vivado_mac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
